index.css
.zdog-canvas {
  display: block;
  /* -webkit-animation: Fade 5s ease;
  -moz-animation: Fade 5s ease;
  animation: Fade 5s ease; */
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  -ms-transition: all 1s ease;
  transition: all 1s ease;
}

hr {
  width: 20vw;
}

.zdog {
  display: block;
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  -ms-transition: all 1s ease;
  transition: all 1s ease;
  /* -webkit-animation: Fade 5s ease;
  -moz-animation: Fade 5s ease;
  animation: Fade 5s ease; */
}

canvas {
  cursor: grab;
}

canvas:active {
  cursor: grabbing;
}

p {
  width: 55vw;
  font-size: 18px;
  line-height: 30px;
  text-align: center;
}
p strong {
  /* text-transform: capitalize; */
  color: #f7c44c;
  /* background: -webkit-linear-gradient(#5854ff, #f7c44c); */
  /* -webkit-background-clip: text;
  -webkit-text-fill-color: transparent; */
}

h1 {
  width: 60vw;
  padding: 10px 0;
}

h2 {
  width: 60vw;
}
a {
  text-decoration: none;
  color: #5854ff;
}

a:visited {
  color: #5854ff;
}

a:hover {
  color: rgb(53, 50, 250);
}

#clock {
  display: flex;
  font-size: 18px;
  font-weight: 600;
  text-align: center;
  color: #fff;
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  -ms-transition: all 1s ease;
  transition: all 1s ease-in;
}

.months,
.days,
.hours,
.minutes,
.seconds {
  padding: 0px 16px 0px 0px;
}

body {
  /* font-family: "Montserrat", sans-serif; */
  font-family: "Varela", sans-serif;
  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  color: #fff;

  background: linear-gradient(
    90deg,
    rgb(21, 12, 21),
    rgb(7, 2, 8),
    rgb(21, 12, 21)
  );

  background-color: rgb(14, 7, 14);
  background-size: 100% 100%;
  background-position: initial;
  -webkit-animation: Gradient 1s ease infinite;
  -moz-animation: Gradient 1s ease infinite;
  animation: Gradient 1s ease infinite;
}

label {
  font-size: 16px;
  text-align: left;
}

.box {
  margin: 16px;
  text-align: right;
}

form {
  padding: 0 48px 0 0;
}

input {
  border-radius: 2px;
  border-width: 0px;
  margin: 0 0 0 4px;
  font-size: 16px;
  cursor: text;
  padding: 4px;
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  -ms-transition: all 1s ease;
  transition: all 1s ease;
}

#form-div {
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  -ms-transition: all 1s ease;
  transition: all 1s ease;
}

button {
  width: 176px;
  height: 32px;
  font-size: 16px;
  border-radius: 8px;
  background: white;
  cursor: pointer;
}

button:hover {
  background: oldlace;
}

.active {
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  -ms-transition: all 1s ease;
  transition: all 1s ease;
  opacity: 1;
}

.inactive {
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  -ms-transition: all 1s ease;
  transition: all 1s ease;
  opacity: 0;
}

@-webkit-keyframes Gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@-moz-keyframes Gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@keyframes Gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@keyframes Fade {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@media only screen and (max-width: 760px) {
  p {
    width: 90vw;
    font-size: 16px;
  }

  h1 {
    width: 90vw;
  }

  h2 {
    width: 90vw;
  }
}

